unpackaged/main/default/objects/Credit_Score__c/Credit_Score__c.object-meta.xml
<CustomObject>
    <description>Custom Object created to house the information about Lead Owners and their credit.  Used by FPC for checking multiple credit scores for one Lead Company</description>
    <label>Credit Score</label>
    <nameField>
        <displayFormat>CS-{0000000000}</displayFormat>
        <label>Credit Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>