unpackaged/main/default/objects/Credit_Score__c/fields/Bankruptcy_Type__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Type__c</fullName>
    <label>Bankruptcy Type</label>
    <type>TextArea</type>
</CustomField>