unpackaged/main/default/objects/Credit_Score__c/fields/Bankrupty_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Bankrupty_Open_Date__c</fullName>
    <label>Bankrupty Open Date</label>
    <type>Date</type>
</CustomField>