unpackaged/main/default/objects/Credit_Score__c/fields/BRS_Score__c.field-meta.xml
<CustomField>
    <fullName>BRS_Score__c</fullName>
    <label>BRS Score</label>
    <length>16</length>
    <type>Text</type>
</CustomField>