unpackaged/main/default/objects/Credit_Score__c/fields/Full_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Street_Address__c</fullName>
    <description>Full Address Concatenated - Formula for App generation.</description>
    <formula>Address_Number__c  &amp; " " &amp; Address_Street__c</formula>
    <inlineHelpText>Full Address Concatenated - Formula for App generation.</inlineHelpText>
    <label>Full Street Address</label>
    <type>Text</type>
</CustomField>