unpackaged/main/default/objects/Credit_Score__c/fields/Last_Pull_Received__c.field-meta.xml
<CustomField>
    <fullName>Last_Pull_Received__c</fullName>
    <label>Last Pull Received</label>
    <type>DateTime</type>
</CustomField>