unpackaged/main/default/objects/Credit_Score__c/fields/Latest_Report_Link__c.field-meta.xml
<CustomField>
    <fullName>Latest_Report_Link__c</fullName>
    <formula>HYPERLINK('file://s29/CreditRpts/' + CASESAFEID(Id) + "-" + TEXT(Credit_Request_ID__c) + '.pdf', 'View', '_blank')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Report Link</label>
    <type>Text</type>
</CustomField>