unpackaged/main/default/objects/Credit_Score__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Credit Scores</relationshipLabel>
    <relationshipName>Credit_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>