unpackaged/main/default/objects/Credit_Score__c/fields/Linked_with_Lead__c.field-meta.xml
<CustomField>
    <fullName>Linked_with_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Linked with Lead</label>
    <type>Checkbox</type>
</CustomField>