unpackaged/main/default/objects/Credit_Score__c/fields/Old_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Old_Credit_Score__c</fullName>
    <description>This field will indicate the customers old credit score.  Typically updated through a credit refresh.</description>
    <inlineHelpText>This field will indicate the customers old credit score.  Typically updated through a credit refresh.</inlineHelpText>
    <label>Old Credit Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>