unpackaged/main/default/objects/Credit_Score__c/fields/Open_Judgments__c.field-meta.xml
<CustomField>
    <fullName>Open_Judgments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Judgments</label>
    <type>Checkbox</type>
</CustomField>