unpackaged/main/default/objects/Credit_Score__c/fields/Open_Tax_Liens__c.field-meta.xml
<CustomField>
    <fullName>Open_Tax_Liens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Tax Liens</label>
    <type>Checkbox</type>
</CustomField>