unpackaged/main/default/objects/Credit_Score__c/fields/Open_Tax_Liens_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Tax_Liens_Amount__c</fullName>
    <label>Open Tax Liens ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>