unpackaged/main/default/objects/Credit_Score__c/fields/Past_Due_30__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_30__c</fullName>
    <label>Past Due 30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>