unpackaged/main/default/objects/Credit_Score__c/fields/Past_Due_90__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_90__c</fullName>
    <label>Past Due 90</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>