unpackaged/main/default/objects/Credit_Score__c/fields/Past_Due_Tradelines__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Tradelines__c</fullName>
    <label>Past Due Tradelines (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>