unpackaged/main/default/objects/Credit_Score__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Request ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>