unpackaged/main/default/objects/Credit_Score__c/fields/Revolving_Available__c.field-meta.xml
<CustomField>
    <fullName>Revolving_Available__c</fullName>
    <label>Revolving Available ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>