unpackaged/main/default/objects/Credit_Score__c/fields/SSN_Masked__c.field-meta.xml
<CustomField>
    <fullName>SSN_Masked__c</fullName>
    <formula>Lead__r.SSN_Masked__c</formula>
    <label>SSN Masked</label>
    <type>Text</type>
</CustomField>