unpackaged/main/default/objects/Credit_Score__c/validationRules/PO_Box_Prevent.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Box_Prevent</fullName>
    <active>false</active>
    <description>This rule will not allow a PO box to be saved in a credit score.</description>
    <errorConditionFormula>OR(Address_Number__c = "PO",Address_Number__c = "P.O.", Address_Number__c = "P.O")</errorConditionFormula>
    <errorMessage>P.O. Boxes are not valid addresses for pulling credit.</errorMessage>
</ValidationRule>